kubernetes/alert-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alert-service-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: alert-service
  template:
    metadata:
      labels:
        app: alert-service
    spec:
      containers:
      - name: alert-service
        image: gcr.io/univiecca1/alert-service-2023w
        ports:
        - containerPort: 8085
        resources:
            requests:
              cpu: "100m"
              memory: "100Mi"
            limits:
              cpu: "500m"
              memory: "500Mi"
