kubernetes/alert-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alert-service
spec:
  type: ClusterIP
  selector:
    app: alert-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
