kubernetes/camera-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: camera-service-section1-camera1
spec:
  type: ClusterIP
  selector:
    app: camera-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: camera-service-section1-camera2
spec:
  type: ClusterIP
  selector:
    app: camera-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: camera-service-section2-camera1
spec:
  type: ClusterIP
  selector:
    app: camera-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: camera-service-section2-camera2
spec:
  type: ClusterIP
  selector:
    app: camera-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
