kubernetes/image-analysis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: image-analysis-service
spec:
  type: ClusterIP
  selector:
    app: image-analysis-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
