kubernetes/section-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: section-service-1
spec:
  type: ClusterIP
  selector:
    app: section-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: section-service-2
spec:
  type: ClusterIP
  selector:
    app: section-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
